crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_015_Multicart15_Subor_V1_0_R.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-015-Multicart15/Subor V1.0 (R).nes
rom_sha256=c6c6ba22d055910adb061b4256d558a97a773c117e9fdd527c2198b61a43764f
frames=1141
fb_bytes=245760
cycles=11373864
audio_samples=280234
audio_fnv1a64=bd04a247f901560d
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=1719dca5cef7a325
