crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_015_Multicart15_Xiao_Au_Jiang_Wu_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-015-Multicart15/Xiao Au Jiang Wu (Ch) [!].nes
rom_sha256=a263fd76119a6b20acabb7e724c42c36af54141bee75b5eb51f6c8c280f85dac
frames=1141
fb_bytes=245760
cycles=33949960
audio_samples=836509
audio_fnv1a64=abdcfaf134b65f2f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
