crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_016_BandaiFCG_Crayon_Shin_chan_Ora_to_Poi_Poi_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-016-BandaiFCG/Crayon Shin-chan - Ora to Poi Poi (Japan).zip
rom_sha256=01282572fe4663e77357b78a70091ae207b8fa758161f74a317e2d020d73b15f
frames=1141
fb_bytes=245760
cycles=33949780
audio_samples=836505
audio_fnv1a64=658297f8e1de91cb
checkpoint f900 fb_fnv1a64=d68c8499c6bd7022
checkpoint f1100 fb_fnv1a64=0c83c8646f87ba55
