crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_016_BandaiFCG_Dragon_Ball_3_Gokuu_Den_Japan_Rev_1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-016-BandaiFCG/Dragon Ball 3 - Gokuu Den (Japan) (Rev 1).zip
rom_sha256=f549f44fde0c04e4f089486f341a4b2e51689a0168e4bcfea1e6e858b7265930
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=e77cb69646dc8095
checkpoint f900 fb_fnv1a64=a599d5cd114f51b9
checkpoint f1100 fb_fnv1a64=4e0b40423fd81e2f
